Got Java Modules to work!